# OpenBiliClaw

./: README.md  README_EN.md  config.example.toml  pyproject.toml
.github/workflows/: build-installers.yml  release-backend.yml  release-desktop.yml  release-extension.yml
.planning/todos/completed/: 2026-06-15-cognition-cursor-incremental-read.md  2026-06-15-insight-soft-invalidation-unwired.md
.worktrees/profile-cognition-cards/docs/plans/: 2026-03-14-profile-cognition-cards-design.md  2026-03-14-profile-cognition-cards.md
docs/: agent-deployment.md  agent-install.md  architecture.md  changelog.md  docker-deployment.md  index.html  index.md  mobile-web-spec.md  spec.md  v0.1-todolist.md
docs/diagrams/: discovery-architecture.html  recommendation-architecture.html
docs/modules/: bilibili.md  cli.md  config.md  discovery.md  extension.md  integrations.md  llm.md  memory.md  recommendation.md  runtime.md  soul.md  storage.md  youtube.md
docs/plans/: 2026-03-08-m13-logging-system-design.md  2026-03-08-m13-logging-system.md  2026-03-08-m33-agent-browser-design.md  2026-03-08-m33-agent-browser.md  2026-03-09-m83-popup-design.md  2026-03-09-m83-popup.md  2026-03-09-m91-feedback-processing-design.md  2026-03-09-m91-feedback-processing.md  2026-03-11-m106-pool-reshuffle-design.md  2026-03-11-m106-pool-reshuffle.md  2026-03-12-m108-cover-cards-design.md  2026-03-12-m108-cover-cards.md  2026-03-14-profile-cognition-cards-design.md  2026-03-14-profile-cognition-cards.md  2026-03-15-reshuffle-batch-and-pool-capacity.md  2026-03-20-recommendation-diversity-design.md  2026-03-20-recommendation-diversity.md  2026-05-06-douyin-bootstrap-import-design.md  2026-05-06-douyin-bootstrap-import.md  2026-05-21-mobile-web-native-redesign-design.md  2026-05-21-mobile-web-native-redesign-plan.md  2026-05-24-avoidance-probes-design.md  2026-05-24-avoidance-probes.md  2026-05-27-bootstrap-service-checks-implementation.md  2026-06-04-unified-discovery-candidate-pool-spec.md
docs/specs/: favorites.md  watch-later.md
extension/: manifest.json  package-lock.json  package.json
extension/popup/: popup-api.js  popup-autostart-control.js  popup-helpers.js  popup-qr.js  popup.html  popup.js
extension/scripts/: build.mjs
extension/src/background/: cookie-sync.ts  debug-log.ts  dy-task-dispatcher.ts  service-worker.ts  xhs-task-dispatcher.ts  yt-task-dispatcher.ts
extension/src/content/: douyin.ts  xiaohongshu.ts
extension/src/content/xhs/: passive.ts  task-executor.ts
extension/src/main/: dy-fetch-tap.ts  xhs-token-sniffer.ts
extension/tests/: dy-content-script.test.ts  popup-api.test.ts  popup-autostart-control.test.ts  popup-copy.test.ts  popup-helpers.test.ts  popup-layout.test.ts  popup-mobile-qr.test.ts  popup-scroll.test.ts  web-favorites.test.ts  web-watch-later.test.ts  xhs-task-dispatcher.test.ts  xhs-task-executor.test.ts  xhs-token-sniffer.test.ts
packaging/: entry.py  openbiliclaw.iss
scripts/: agent_bootstrap.py  install.ps1  install.sh
skills/openbiliclaw-adapter/: SKILL.md
src/openbiliclaw/: __init__.py  cli.py  config.py  logging_setup.py
src/openbiliclaw/api/: app.py  auth.py  models.py  runtime_context.py
src/openbiliclaw/bilibili/: browser.py
src/openbiliclaw/discovery/: candidate_pipeline.py  candidate_pool.py  engine.py
src/openbiliclaw/discovery/strategies/: _utils.py  douyin_direct.py  explore.py  related_chain.py  search.py  trending.py  youtube.py
src/openbiliclaw/eval/: event_simulator.py
src/openbiliclaw/integrations/openclaw/: __init__.py  bootstrap.py  cli.py  operations.py  schemas.py  skill.py
src/openbiliclaw/llm/: embedding.py  gemini_provider.py  ollama_provider.py  prompts.py  registry.py
src/openbiliclaw/memory/: manager.py
src/openbiliclaw/recommendation/: engine.py
src/openbiliclaw/runtime/: account_sync.py  douyin_producer.py  ollama_supervisor.py  refresh.py  xhs_producer.py  youtube_producer.py
src/openbiliclaw/soul/: avoidance_speculator.py  awareness_analyzer.py  cognition_cycle.py  dislike_writeback.py  engine.py  insight_analyzer.py  layer_updaters.py  overrides.py  pipeline.py  preference_analyzer.py  profile_builder.py  speculator.py
src/openbiliclaw/sources/: bilibili_adapter.py  browser.py  tools.py  web_adapter.py  xhs_keyword_gen.py  xhs_tasks.py  xiaohongshu_adapter.py
src/openbiliclaw/storage/: database.py
src/openbiliclaw/web/: index.html  manifest.json
src/openbiliclaw/web/assets/css/: app.css
src/openbiliclaw/web/css/: app.css
src/openbiliclaw/web/desktop/: index.html
src/openbiliclaw/web/desktop/assets/css/: app.css
src/openbiliclaw/web/desktop/assets/js/: app.js
src/openbiliclaw/web/js/: api.js  app.js  state.js  stream.js  view-models.js
src/openbiliclaw/web/js/views/: chat.js  profile.js  recommend.js  saved.js
src/openbiliclaw/webui/: index.html
src/openbiliclaw/youtube/: client.py
tests/: test_account_sync.py  test_agent_bootstrap.py  test_api_app.py  test_api_config_transactional.py  test_api_degraded_mode.py  test_api_image_proxy.py  test_api_insight_feedback.py  test_api_xhs_ingest.py  test_avoidance_speculator.py  test_awareness_analyzer.py  test_bili_extension_browser_e2e.py  test_bili_extension_e2e_harness.py  test_bilibili_browser.py  test_browser_manager.py  test_cli.py  test_cli_logging.py  test_cognition_cycle.py  test_config.py  test_delight_scorer.py  test_desktop_web_pool_status.py  test_discovery_candidate_pipeline.py  test_discovery_candidate_store.py  test_discovery_engine.py  test_discovery_keywords.py  test_douyin_producer.py  test_e2e_multi_source_diversity.py  test_embedding_service.py  test_event_format.py  test_favorites_api.py  test_init_coordinator.py  test_insight_analyzer.py  test_install_contract_docs.py  test_llm_prompts.py  test_llm_providers.py  test_llm_registry.py  test_logging_setup.py  test_memory_manager.py  test_mobile_web_delight_layout.py  test_mobile_web_view_models.py  test_openclaw_adapter.py  (+18 more)
