[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openbiliclaw"
version = "0.2.1"
description = "Your AI friend on Bilibili — understands who you are and finds content you'll love."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "OpenBiliClaw Contributors" },
]
keywords = ["bilibili", "ai", "agent", "recommendation", "llm"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
]

dependencies = [
    "httpx>=0.27",
    "bilibili-api-python>=16",
    "openai>=1.0",
    "anthropic>=0.40",
    "google-genai>=1.66",
    "fastapi>=0.115",
    "rich>=13",
    "typer>=0.12",
    "pydantic>=2.0",
    "apscheduler>=3.10",
    "uvicorn>=0.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "ruff>=0.8",
    "mypy>=1.13",
]
local-llm = [
    "ollama>=0.4",
]
eval = [
    "claude-agent-sdk>=0.1",
]
browser = [
    "playwright>=1.40",
]

[project.scripts]
openbiliclaw = "openbiliclaw.cli:app"

[project.urls]
Homepage = "https://github.com/whiteguo233/OpenBiliClaw"
Repository = "https://github.com/whiteguo233/OpenBiliClaw"
Issues = "https://github.com/whiteguo233/OpenBiliClaw/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/openbiliclaw"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]

[tool.ruff.lint.per-file-ignores]
"src/openbiliclaw/llm/prompts.py" = ["E501"]  # Prompt templates contain long JSON examples
"src/openbiliclaw/llm/prompts_pipeline.py" = ["E501"]
"scripts/*.py" = ["E501"]  # Scripts contain long prompt strings

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: real Bilibili API checks that require local credentials",
]
